# C_Notes

./: ._data_type_range.c  ._set_bit.c  .gitignore  C.kdev4  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  arr_mem_dump  char_count  character_count  character_count.c  command_args2_getopt.c  data_type_range  data_type_range.c  double_point_to_func.c  dtr  dtrb  exec1.c  exec_log  farh-celcius.c  fork_wait.c  get_next_line.c  get_next_line.h  invert_bits.c  longest_line  longest_line.c  longest_line_exec  macro1.c  macro2.c  macro_swap.c  main  mini_cat  mini_cat.c  print_bits.c  print_bits.h.gch  printf  printf.c  process_comm_1.c  random  (+13 more)
.ccls-cache/@@media@olu@Store1@lang@C/: @usr@include@alloca.h.blob  @usr@include@assert.h.blob  @usr@include@endian.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@pthread.h.blob  @usr@include@sched.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@threads.h.blob  @usr@include@time.h.blob  @usr@include@unistd.h.blob  @usr@include@x86_64-linux-gnu@bits@atomic_wide_counter.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@confname.h.blob  @usr@include@x86_64-linux-gnu@bits@cpu-set.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@environments.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@getopt_core.h.blob  @usr@include@x86_64-linux-gnu@bits@getopt_posix.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@posix_opt.h.blob  @usr@include@x86_64-linux-gnu@bits@pthread_stack_min-dynamic.h.blob  (+50 more)
.kdev4/: C.kdev4
Array_Pointers/: arra_size1  arra_size1.c  func_pointers  func_pointers.c  modify_pointer_in_func  modify_pointer_in_func.c  multidim1  multidim1.c  multidim2  multidim2.c  pointer_to_pointer.c  pointer_to_pointer2  pointer_to_pointer2.c
CharacterStrings/: char_count  random.c  simple_str_len  str_len_simple.c  str_ops.c  strcat_pointer.c  strct1  strtood.c
DS/: tree1.c
DataStructures/: permutation_backtracking  permutation_backtracking.c  permutation_heaps_algo  permutation_heaps_algo.c
DataStructures/LinkedList/: ll  ll.c  (+1 more)
HackerRank/: strings_sort1.c
Threads/: barr  barrier1  cancel1.c  recursive_mutex  recursive_mutex.c  semaphore1  semaphore1.c  semaphore2  semaphore2.c  thread_cond_1.c
Unix/: exec1  exec1.c  process_comm_2.c  process_fifo.c  signal_parent_child.c
unix/: fork1.c  signal_handling.c  signal_stop_and_start.c
(+210 files in other folders)
