cmake_minimum_required(VERSION 3.16)
project(learn C)

set(CMAKE_C_STANDARD 11)
add_compile_options(-O1 -fhardened -Wpedantic -Wall -Wextra) #-fsanitize=address )
#add_link_options(-fsanitize=address)#needed to match compile libasan option
add_definitions(-DDEBUG)


add_executable(main main.c)
add_executable(farh-celcius farh-celcius.c)
add_executable(character_count character_count.c)
add_executable(longest_line get_next_line.c longest_line.c)
add_executable(data_type_range data_type_range.c)
add_executable(data_type_range_bits data_type_range_bits.c)
add_executable(print_bits print_bits.c)
add_executable(invert_bits set_bit.c)
add_executable(set_bit set_bit.c print_bits.c)
add_executable(strend strend.c)
add_executable(random random.c)

add_executable(quicksort quicksort.c)
add_executable(macro_swap macro_swap.c)
add_executable(p2p pointer_to_pointer.c)
add_executable(command_args1 get_next_line.c command_args1.c)
add_executable(  process_fifo unix/process_fifo.c)
add_executable(process_comm_1 unix/process_comm_1.c)
add_executable(process_comm_2 unix/process_comm_2.c)
add_executable(command_args2 command_args2_getopt.c)
add_executable(tree1 ./DS/tree1.c get_next_line.c)
add_executable(mini_cat mini_cat.c)
add_executable(arra_size1 arra_size1.c)

add_executable(macro2 macro2.c)
add_executable(strops2 strops2.c)
add_executable(strtood strtood.c)
add_executable(double_point_to_func double_point_to_func.c)
add_executable(u u.c)
add_executable(fork1 unix/fork1.c)
add_executable(fork_wait unix/fork_wait.c)
add_executable(exec1 exec1.c)
add_executable(exec1start_stop unix/signal_stop_and_start.c)
add_executable(signal_handling unix/signal_handling.c)
add_executable(signal_parent_child unix/signal_parent_child.c)
add_executable(hello Threads/hello.c)
add_executable(join Threads/join1.c)
add_executable(notif Threads/nfc/notif.h Threads/nfc/notif.c)
add_executable(cancel1 Threads/cancel1.c)
add_executable(mutext1 Threads/mutex1.c)
add_executable(join2 Threads/join2.c)
add_executable(add_array_threads Threads/add_array_threads.c)
add_executable(cond1 Threads/thread_cond_1.c)
add_executable(din_ph Threads/din_ph/din_ph.c
        Threads/din_ph/din_ph.h
        Threads/din_ph/spn.c
        Threads/din_ph/phil.c)
